MainFreight_PartialSandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACH_Account_Number__c</fullName>
        <description>The Automated Clearing House (ACH) is an electronic payment delivery system which allows you to make payments or collect funds electronically through the ACH network.</description>
        <inlineHelpText>This is the routing number for ACH Payment.</inlineHelpText>
        <label>ACH Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status_Potential__c</fullName>
        <label>Account Status Potential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Request_Type__c</fullName>
        <label>Action Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cargowise_CW_Account__c</fullName>
        <label>Cargowise (CW) Account #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargowise_Password__c</fullName>
        <label>Cargowise Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargowise__c</fullName>
        <label>Cargowise</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Profile_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Profile Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Limit_Terms__c</fullName>
        <label>Credit Limit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7 days</fullName>
                </value>
                <value>
                    <fullName>10 days</fullName>
                </value>
                <value>
                    <fullName>15 days</fullName>
                </value>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>45 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Active Customer</fullName>
                </value>
                <value>
                    <fullName>Lost Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customs_Broker_Specify__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customs Broker represent to the Accounts of Type Partner only</inlineHelpText>
        <label>Customs Broker (Specify)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Can only be associated with Accounts of Type &apos;Partner&apos;.</errorMessage>
            <filterItems>
                <field>$Source.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom Brokers</relationshipLabel>
        <relationshipName>CustomsBrokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customs_Broker__c</fullName>
        <label>Customs Broker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mainfreight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Line__c</fullName>
        <label>Direct Line</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EIN_IRS_No__c</fullName>
        <label>EIN/IRS No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Information__c</fullName>
        <description>URL to stock exchange</description>
        <label>Financial Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Customer__c</fullName>
        <label>Is Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Test_Account__c</fullName>
        <label>Is Test Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_Shipper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Known Shipper is an individual or entity wishing to tender their own goods for air transportation on a passenger air carrier that has gone through an approval process mandated by the TSA.

If box is checked, then this account information is recognized in TSA&apos;s Known Shipper Management System (KSMS).</description>
        <inlineHelpText>Recognized in TSA&apos;s Known Shipper Management System (KSMS).</inlineHelpText>
        <label>Known Shipper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HQ / Corporate</fullName>
                </value>
                <value>
                    <fullName>Division / BU</fullName>
                </value>
                <value>
                    <fullName>Sub-Division</fullName>
                </value>
                <value>
                    <fullName>Distribution Center</fullName>
                </value>
                <value>
                    <fullName>Shipping Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mainchain_Order_Mgmt__c</fullName>
        <label>Mainchain Order Mgmt (MOM) Account #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mainstreet__c</fullName>
        <label>Mainstreet (MS) Account#</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Local Cartage</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Overseas Agents</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Carnet</fullName>
                </value>
                <value>
                    <fullName>Courrier</fullName>
                </value>
                <value>
                    <fullName>Carnet &amp; Bond Provider</fullName>
                </value>
                <value>
                    <fullName>Customs</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Customs Broker</fullName>
                </value>
                <value>
                    <fullName>Shipping Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_1_Key__c</fullName>
        <label>System 1 Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_50_Account__c</fullName>
        <label>Top 50 Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_Password__c</fullName>
        <inlineHelpText>Mainchain.net Password</inlineHelpText>
        <label>Website Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Username__c</fullName>
        <inlineHelpText>Mainchain.net Username</inlineHelpText>
        <label>Website Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Action_Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Location_Type__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Account_Hierarchy</fullName>
        <active>true</active>
        <description>Location Type must be depend upon the Parent Account&apos;s Location Type.</description>
        <errorConditionFormula>NOT(
  OR( 
     AND( ISPICKVAL( Location_Type__c, &apos;HQ / Corporate&apos; ), ( ISBLANK( ParentId ) ) ),
     AND( ISPICKVAL( Location_Type__c, &apos;Division / BU&apos; ), ( ISBLANK( ParentId ) || ISPICKVAL( Parent.Location_Type__c, &apos;HQ / Corporate&apos; ) ) ),
     AND( ISPICKVAL( Location_Type__c, &apos;Sub-Division&apos; ), ( ISBLANK( ParentId ) || ISPICKVAL( Parent.Location_Type__c, &apos;Division / BU&apos; ) ) ),
     AND( ISPICKVAL( Location_Type__c, &apos;Distribution Center&apos; ), (ISBLANK( ParentId ) ) ),
     AND( ISPICKVAL( Location_Type__c, &apos;Shipping Location&apos; ), ( ISBLANK( ParentId ) ) )
))</errorConditionFormula>
        <errorDisplayField>Location_Type__c</errorDisplayField>
        <errorMessage>Please select the appropriate Location Type. You may want to check the Location Type of the Parent Account if available.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Account_Hierarchy_v2</fullName>
        <active>false</active>
        <errorConditionFormula>NOT (OR( 
     AND( ISPICKVAL( Location_Type__c, &apos;HQ / Corporate&apos; ), ( ISBLANK( ParentId ) ) ),
     AND( ISPICKVAL( Location_Type__c, &apos;Distribution Center&apos; ), (ISBLANK( ParentId ) ) ),
     AND( ISPICKVAL( Location_Type__c, &apos;Shipping Location&apos; ), ( ISBLANK( ParentId ) ) )
))</errorConditionFormula>
        <errorMessage>Please select the appropriate Location Type. You may want to check the Location Type of the Parent Account if available.</errorMessage>
    </validationRules>
</CustomObject>